--- a/homeassistant/components/iqvolt_tesla_custom/services.yaml
+++ b/homeassistant/components/iqvolt_tesla_custom/services.yaml
@@ -3,12 +3,15 @@ api:
   fields:
     # Key of the field
     base_url:
+    # Description of the field
+    # Example value that can be passed for this field
       example: "1.2.3.4:5000"
       required: false
       selector:
         text:
 
     command:
+      # Description of the field
       # Example value that can be passed for this field
       example: "WAKE_UP"
       required: true
@@ -17,7 +20,6 @@ api:
 
     parameters:
       # Description of the field
-      # Example value that can be passed for this field
       example: '{"path_vars": {"vehicle_id":"1"}, "wake_if_asleep":True}'
       required: false
       selector:
@@ -33,6 +35,8 @@ polling_interval:
       selector:
         text:
     vin:
+      # Description of the field
+
       # Example value that can be passed for this field
       example: "5YJSA11111111111"
       required: false
