--- a/Integrations/compose.yaml
+++ b/Integrations/compose.yaml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   homeassistant:
-    container_name: homeassistant_container_2
+    container_name: home_assistant
     image: "homeassistant/home-assistant:latest"
     volumes:
-      - /Users/pascalweissleder/Desktop/ha_container:/config
+      - /Path/to/dir/ha_config:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     privileged: true
